My impl of lab 6