@@ -6,6 +6,7 @@ import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcDaoSupport;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -45,7 +46,7 @@ public class CountryDao extends NamedParameterJdbcDaoSupport {
     public List<Country> getCountryListStartWith(String name) {
         return getNamedParameterJdbcTemplate()
                 .query(GET_COUNTRIES_BY_NAME_SQL,
-                        Map.of("name", name + "%"),
+                        Collections.singletonMap("name", name + "%"),
                         COUNTRY_ROW_MAPPER);
     }
 
